// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyMetricStat should render a key metrics chart (grouped key metrics) 1`] = `
<div>
  <div
    class="metrics"
  >
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Tickets created
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-tickets_created-0"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            833
          </div>
          <span
            class="diff"
            id="value-tickets_created-0"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference positive"
              >
                arrow_upward
              </i>
              52
              %
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Tickets converted
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-tickets_converted-1"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            153
          </div>
          <span
            class="diff"
            id="value-tickets_converted-1"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference positive"
              >
                arrow_upward
              </i>
              43
              %
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Conversion ratio
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-conversion_ratio-2"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            50%
          </div>
          <span
            class="diff"
            id="value-conversion_ratio-2"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference positive"
              >
                arrow_upward
              </i>
              10
              %
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Total sales from support
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total_sales_from_support-3"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            €42
          </div>
          <span
            class="diff"
            id="value-total_sales_from_support-3"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference positive"
              >
                arrow_upward
              </i>
              21
              %
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KeyMetricStat should render a key metrics chart (splitted key metrics) 1`] = `
<div>
  <div
    class="metrics"
  >
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Tickets created
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-tickets-created-0"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Tickets replied
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-tickets-replied-1"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Tickets closed
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-tickets-closed-2"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Messages sent
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-messages-sent-3"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            20
          </div>
          <span
            class="diff"
            id="value-total-messages-sent-3"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference"
              >
                arrow_forward
              </i>
              0
              %
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Messages received
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-messages-received-4"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        First response time
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-median-first-response-time-5"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Resolution time
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-median-resolution-time-6"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="value"
          >
            3d 23h 
          </div>
          <span
            class="diff"
            id="value-median-resolution-time-6"
          >
            <span>
              <i
                class="material-icons mr-1 statsDifference negative"
              >
                arrow_upward
              </i>
              100
              %
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        One-touch tickets
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total-one-touch-tickets-7"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
  </div>
</div>
`;

exports[`KeyMetricStat should render a key metrics chart with distribution and donut components 1`] = `
<div>
  <div
    class="metrics"
  >
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Survey sent
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-total_sent-0"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Response rate
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-response_rate-1"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        -
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Average rating
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-average_rating-2"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div
          class="container"
        >
          <svg
            class="donut"
            viewBox="0 0 320 320"
          >
            <path
              class="path-warning"
              d="M159.99,8.00
          A152.00,152.00 0 1 1 160.00,8.00A5.76,5.76 0 1 1 160.00,27.20A132.79,132.79 0 1 0 159.99,27.20A5.76,5.76 0 1 1 159.99,8.00"
            />
            <path
              class="path-empty"
              d="M160.00,8.00
          A152.00,152.00 0 0 1 159.99,8.00A5.76,5.76 0 0 0 159.99,27.20A132.79,132.79 0 0 0 160.00,27.20A5.76,5.76 0 0 0 160.00,8.00"
            />
          </svg>
          <div
            class="difference"
          >
            <div
              class="value"
            >
              20
            </div>
            <div>
              <span
                class="diff"
                id="value-average_rating-2"
              >
                <span>
                  <i
                    class="material-icons mr-1 statsDifference"
                  >
                    arrow_upward
                  </i>
                  10
                  %
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="metric"
    >
      <div
        class="label"
      >
        Response Distribution
        <span>
          <i
            class="material-icons ml-2 helpIcon info-icon"
            id="title-response_distribution-3"
          >
            info_outline
          </i>
        </span>
      </div>
      <div
        class="mt-3 statsDisplay"
      >
        <div>
          <div
            class="mb-1 row"
          >
            <div
              class="col-md-6 ta-left"
            >
              <span
                class="distribution"
              >
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
              </span>
            </div>
            <div
              class="value col-md-3 ta-right"
            >
              21
            </div>
          </div>
          <div
            class="mb-1 row"
          >
            <div
              class="col-md-6 ta-left"
            >
              <span
                class="distribution"
              >
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
              </span>
            </div>
            <div
              class="value col-md-3 ta-right"
            >
              14.5
            </div>
          </div>
          <div
            class="mb-1 row"
          >
            <div
              class="col-md-6 ta-left"
            >
              <span
                class="distribution"
              >
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
              </span>
            </div>
            <div
              class="value col-md-3 ta-right"
            >
              14.5
            </div>
          </div>
          <div
            class="mb-1 row"
          >
            <div
              class="col-md-6 ta-left"
            >
              <span
                class="distribution"
              >
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
              </span>
            </div>
            <div
              class="value col-md-3 ta-right"
            >
              38
            </div>
          </div>
          <div
            class="mb-1 row"
          >
            <div
              class="col-md-6 ta-left"
            >
              <span
                class="distribution"
              >
                <img
                  alt="filled star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
                <img
                  alt="empty star"
                  class="star"
                  src="test-file-stub"
                />
              </span>
            </div>
            <div
              class="value col-md-3 ta-right"
            >
              12
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
